dokeos/claroline/css/default.css
/* ... */
.tabbed-pane-tabs li a:hover, .tabbed-pane-tabs li a.current
{
	background: white;
	margin-top: 0;
	padding-bottom: 0.5em;
	border-bottom-color: white;
}
.tabbed-pane-tabs li a:active, .tabbed-pane-tabs li a.current
{
	color: black;
}
.tabbed-pane-content
{
	clear: both;
	border: 1px solid #4271b5;
	margin: 0;
	padding: 1em;
}

/* treemenu */

ul.treeMenu, ul.treeMenu ul
{
	list-style: none;
	margin: 0;
	padding: 0;
}

ul.treeMenu ul
{
	background: url(../img/treemenu/tree-branch.gif) repeat-y;
}

/*
 * li.last > ul doesn't work in IE, so we force it this way
 */
ul.treeMenu li.last ul.last
{
	background: none;
}

ul.treeMenu li
{
	margin: 0;
	padding: 0 0 0 18px;
}

ul.treeMenu li div
{
	margin: 0;
	padding: 0 0 0 18px;
	background: url(../img/treemenu/tree-node-open.gif) no-repeat;
	height: 18px;
	/* TODO: Transparency */
	background-color: white;
}

ul.treeMenu li.collapsed div
{
	background-image: url(../img/treemenu/tree-node.gif);
}

ul.treeMenu li.root
{
	padding-left: 0;
}

/*
 * see above (li.last > div)
 */
ul.treeMenu li.last div.last
{
	background-image: url(../img/treemenu/tree-node-open-end.gif);
	/* TODO: Transparency */
	background-color: white;
}

/*
 * IE doesn't like li.last.collapsed
 */
ul.treeMenu li.lastcollapsed div.last
{
	background-image: url(../img/treemenu/tree-node-end.gif);
}

ul.treeMenu li.leaf div
{
	background-image: url(../img/treemenu/tree-leaf.gif);
}

/*
 * IE doesn't like li.leaf.last
 */
ul.treeMenu li.lastleaf div.last
{
	background-image: url(../img/treemenu/tree-leaf-end.gif);
}

ul.treeMenu li div a
{
	margin: 0;
	padding: 0 0 0 18px;
	background: url(../img/treemenu/tree-folder-open.gif) no-repeat;
	display: block;
	height: 18px;
	white-space: nowrap;
	overflow: hidden;
	/* TODO: Transparency */
	background-color: white;
}

ul.treeMenu li.collapsed div a
{
	background: url(../img/treemenu/tree-folder.gif) no-repeat;	
	/* TODO: Transparency */
	background-color: white;
}

ul.treeMenu li.collapsed ul
{
	display: none;
}

/*
 * Tweak: Font size is 12px, nodes are 18px high. That leaves (18 - 12) / 2px.
 */
ul.treeMenu li div a
{
	padding-top: 3px;
}

/*
 * Tweak: Some extra space between folder and text--2px will do.
 */
ul.treeMenu li div a
{
	padding-left: 20px;
}

/* Calendar */
table.calendar
{
 width: 100%;
 border-collapse: collapse;
 font-size: 10px;
}
table.calendar tr
{
 margin: 0px;
 padding: 0px;
}
table.calendar td
{
border: 1px solid #000000;
margin: 0px;
padding: 2px;
height: 60px;
vertical-align: top;
width:13%;
}
table.calendar th
{
	width: 13%;
}
div.event
{
 border: 1px solid #CCCCCC;
 background-color: #F3F4F6;
 margin: 1px;
 padding: 2px;
/* height: 20px;*/
}
div.event:hover
{
 	background-color: #DDFFDD;
}
table.calendar td.highlight
{
	border: 2px solid black;
	background-color: white;
}

